[package]
name = "lambda-router"
version = "0.1.0"
edition = "2021"
description = "A lightweight, Express-like REST API routing framework for AWS Lambda with middleware, authentication, and CORS support"
license = "MIT"
authors = ["Shehzad Gill <shehzadigill@gmail.com>"]
repository = "https://github.com/Rehan712/lambda-router"
homepage = "https://github.com/Rehan712/lambda-router"
documentation = "https://docs.rs/lambda-router"
readme = "README.md"
keywords = ["aws", "lambda", "router", "serverless", "api"]
categories = ["web-programming", "asynchronous", "network-programming"]
exclude = [
    ".github/*",
    ".gitignore",
    "examples/*",
    "tests/*",
]

[lib]
name = "lambda_router"
path = "src/lib.rs"

[dependencies]
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
lazy_static = "1.4"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "basic"
path = "examples/basic.rs"
